--- a/css/avos.css
+++ b/css/avos.css
@@ -86,14 +86,32 @@ hr {
 input, select {
   vertical-align: middle; }
 
+h1, h2, h3, h4, h5 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 900;
+  letter-spacing: 1px;
+  color: #1f1f1f;
+  padding-bottom: 1.4rem; }
+
+p, ul, ol, li, span {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  color: #1f1f1f; }
+
+p {
+  padding-bottom: 1rem; }
+
+h1 {
+  font-size: 22px; }
+
 html {
   height: 100%; }
 
 body {
   display: flex;
   min-height: 100vh;
-  flex-direction: column;
-  background-color: #eaeaea; }
+  flex-direction: column; }
 
 .page-wrap {
   flex: 1; }
