--- a/src/sass/avos.scss
+++ b/src/sass/avos.scss
@@ -1,4 +1,5 @@
 @import "reset" ;
+@import "type" ;
 
 html {
     height: 100% ;
@@ -7,8 +8,7 @@ html {
 body {
     display: flex ;
     min-height: 100vh ;
-    flex-direction: column ;
-    background-color: #eaeaea ;
+    flex-direction: column ;    
 }
 
 .page-wrap {
