--- a/src/sass/avos.scss
+++ b/src/sass/avos.scss
@@ -1,32 +1,7 @@
 @import "reset" ;
 @import "type" ;
 
-html {
-    height: 100% ;
-}
+/* main contains the main bulk of our styles */
+@import "main" ;
 
-body {
-    display: flex ;
-    min-height: 100vh ;
-    flex-direction: column ;    
-}
-
-.page-wrap {
-    flex:     1 ;
-}
-
-#global-header {
-    padding-top: 2rem ;
-    padding-bottom: 2rem ;
-}
-
-#global-footer {
-    padding-top: 2rem ;
-    padding-bottom: 2rem ;    
-}
-
-.row {
-    position: relative ;
-    padding-left: 6% ;
-    padding-right: 6% ;
-}
+@import "awesomplete"
