--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,8 @@ body {
 
 #global-footer {
   padding-top: 2rem;
-  padding-bottom: 2rem; }
+  padding-bottom: 2rem;
+  background-color: #ececec; }
 
 span.error.hidden {
   display: none; }
