--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,7 +19,8 @@ body {
 
 #global-footer {
     padding-top: 2rem ;
-    padding-bottom: 2rem ;    
+    padding-bottom: 2rem ;
+    background-color : #ececec ;
 }
 
 span.error.hidden {
