style tweaks. add my name

--- a/css/avos.css
+++ b/css/avos.css
@@ -157,6 +157,9 @@ span.error {
   border-radius: 3px;
   background-color: #ff8ac1; }
 
+.story-container {
+  display: none; }
+
 .awesomplete [hidden] {
   display: none; }
 
