--- a/css/main.css
+++ b/css/main.css
@@ -34,4 +34,7 @@ span.error {
   border-radius: 3px;
   background-color: #ff8ac1; }
 
+.story-container {
+  display: none; }
+
 /*# sourceMappingURL=maps/main.css.map */
