--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,16 +5,36 @@ html {
 body {
     display: flex ;
     min-height: 100vh ;
-    flex-direction: column ;    
+    flex-direction: column ;
+    background: linear-gradient(to right, rgb(201, 200, 253), rgb(187, 239, 219), rgb(201, 200, 253), rgb(187, 239, 219));
+    background-image: url('/img/grit-green.jpg') ;
 }
 
 .page-wrap {
     flex:     1 ;
+    margin-bottom: 3erm ;
+}
+
+main {
+    position: relative ;
+    margin-top: 2rem ;
+    margin-right: auto ;
+    margin-left: auto ;
+    width: 98% ;
+    max-width: 980px ;
+    background-color: #fff ;
+    padding-bottom: 2rem
 }
 
 #global-header {
-    padding-top: 2rem ;
-    padding-bottom: 2rem ;
+    padding-top: 3rem ;
+    padding-bottom: 3rem ;
+    h1 {
+	text-align: center ;
+	font-size: 36px ;
+	text-transform: uppercase ;
+	padding-bottom: 0 ;
+    }
 }
 
 #global-footer {
@@ -31,11 +51,12 @@ span.error.hidden {
     position: relative ;
     padding-left: 6% ;
     padding-right: 6% ;
+
 }
 
 span.error {
     display: inline ;
-    margin-top: 14px ;    
+    margin-top: 14px ;
     padding: 8px ;
     font-size: 14px ;
     border-radius: 3px ;
