--- a/css/avos.css
+++ b/css/avos.css
@@ -96,8 +96,9 @@ h1, h2, h3, h4, h5 {
 p, ul, ol, li, span {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
-  font-size: 18px;
-  color: #1f1f1f; }
+  font-size: 22px;
+  color: #1f1f1f;
+  line-height: 1.4; }
 
 p {
   padding-bottom: 1rem; }
@@ -143,11 +144,13 @@ main {
   width: 98%;
   max-width: 980px;
   background-color: #fff;
-  padding-bottom: 2rem; }
+  padding-bottom: 2rem;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  margin-bottom: 3rem; }
 
 #global-header {
-  padding-top: 3rem;
-  padding-bottom: 3rem; }
+  padding-top: 4rem;
+  padding-bottom: 4rem; }
   #global-header h1 {
     text-align: center;
     font-size: 36px;
@@ -177,6 +180,20 @@ span.error {
 
 .story-container {
   display: none; }
+
+input[type=text] {
+  padding: 3px;
+  border-radius: 3px;
+  border: 1px solid #52e01a;
+  font-family: 'Raleway', sans-serif;
+  font-size: 22px; }
+
+button {
+  margin-top: 22px;
+  margin-bottom: 22px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 22px;
+  padding: 8px 12px; }
 
 .awesomplete [hidden] {
   display: none; }
