--- a/css/main.css
+++ b/css/main.css
@@ -20,11 +20,13 @@ main {
   width: 98%;
   max-width: 980px;
   background-color: #fff;
-  padding-bottom: 2rem; }
+  padding-bottom: 2rem;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  margin-bottom: 3rem; }
 
 #global-header {
-  padding-top: 3rem;
-  padding-bottom: 3rem; }
+  padding-top: 4rem;
+  padding-bottom: 4rem; }
   #global-header h1 {
     text-align: center;
     font-size: 36px;
