--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,12 +23,15 @@ main {
     width: 98% ;
     max-width: 980px ;
     background-color: #fff ;
-    padding-bottom: 2rem
+    padding-bottom: 2rem ;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    margin-bottom: 3rem ;
 }
 
+
 #global-header {
-    padding-top: 3rem ;
-    padding-bottom: 3rem ;
+    padding-top: 4rem ;
+    padding-bottom: 4rem ;
     h1 {
 	text-align: center ;
 	font-size: 36px ;
